[package]
name = "axum-deom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
console-subscriber = "0.1.7"
hyper = { version = "0.14.20", features = ["full"] }
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full", "tracing"] }
tracing = { version = "0.1.36", features = ["async-await"] }
